# atelier

./: .env.production.example  .gitignore  AGENTS.atelier.md  AGENTS.md  AGENT_README.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.frontend  GEMINI.atelier.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: __init__.py
benchmarks/swe/: README.md  __init__.py  agent_runner.py  config.py  datasets.py  metrics.py  modes.py  patch_export.py  prompts.py  prompts_11.yaml  real_world_81.yaml  report.py  run_swe_bench.py  savings_bench.py  savings_replay.py  swebench_eval.py  task_runner.py
deploy/: otel-collector-dev.yaml  otel-collector.yaml
deploy/letta/: .env.example  docker-compose.yml
docs/: CURRENT_STATUS.md  README.md  cli.md  installation.md  integration-claude-code.md  integration-codex.md  open-source-strategy.md  packs.md  production-readiness.md  quickstart.md  troubleshooting.md
docs-site/: Dockerfile  custom.css  docusaurus.config.ts  index.tsx  sidebars.ts  sync-docs.sh
docs/architecture/: IMPLEMENTATION_PLAN_V2.md  IMPLEMENTATION_PLAN_V2_DATA_MODEL.md  IMPLEMENTATION_PLAN_V3.md  IMPLEMENTATION_PLAN_V3_DATA_MODEL.md  POSITIONING_AND_ADOPTION.md  _category_.json  cost-performance-runtime.md  ecosystem.md  full-v3-works.md  runtime.md
docs/authoring/: failure-cluster-authoring.md  reasonblock-authoring.md
docs/benchmarks/: _category_.json  beseam.md  cost-quality-proof.md  custom.md  phase7-2026-04-29.md  real-world-validation-2026-05-04.md  sdk-benchmark.md  v2-context-savings.md  v3-honest-savings-results.csv  v3-honest-savings.md
docs/community/: environment-authoring.md  failure-cluster-authoring.md  rubric-authoring.md
docs/copy-paste/: _category_.json  copilot-instructions.md
docs/core/: benchmarking.md  capabilities.md  compact-tool-output.md  context-compression.md  loop-detection.md  reasoning-reuse.md  repo-map.md  runtime.md  semantic-memory.md  tool-supervision.md
docs/engineering/: _category_.json  architecture.md  contributing.md  deployment-modes.md  dogfooding.md  evals.md  lesson-pipeline.md  mcp.md  phase-t-hardening.md  security.md  service.md  storage.md  trace-confidence.md  workers.md
docs/hosts/: _category_.json  all-agent-clis.md  claude-code-install.md  claude-code.md  codex-install.md  codex.md  copilot-install.md  copilot.md  gemini-cli-install.md  gemini-cli.md  host-capability-matrix.md  opencode-install.md  opencode.md
examples/: AGENT_README.md
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
integrations/: README.md
scripts/: AGENT_README.md  atelier_mcp_stdio.sh  install_agent_clis.sh  install_claude.sh  install_codex.sh  install_copilot.sh  install_gemini.sh  install_opencode.sh  live_performance_test.py  simulate_hf_run.py  status.sh  uninstall_claude.sh  uninstall_codex.sh  uninstall_copilot.sh  uninstall_gemini.sh  uninstall_opencode.sh  verify_agent_clis.sh  verify_atelier_local.sh  verify_atelier_mcp_stdio.sh  verify_atelier_opencode.sh  verify_atelier_postgres.sh  verify_atelier_service.sh  verify_claude.sh  verify_claude_plugin_dev.sh  verify_codex.sh  verify_copilot.sh  verify_gemini.sh  verify_opencode.sh
tests/: AGENT_README.md  README.md  conftest.py
(+573 files in other folders)
