[project]
name = "atelier"
version = "0.1.0"
description = "Agent Reasoning Runtime — reusable procedures, failure rescue, and rubric verification for coding and product agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Atelier" }]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "pydantic>=2.6",
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.7",
    "tiktoken>=0.9",
    "blake3>=0.4.1",
    "datasketch>=1.6",
    "tree-sitter>=0.23",
    "GitPython>=3.1",
    "prometheus-client>=0.21",
    "tenacity>=9.0",
    "pybreaker>=1.2",
    "river>=0.22",
    "networkx>=3.4",
    "mypy>=1.20.2",
    "types-pyyaml>=6.0.12.20260408",
    "ortools>=9.10",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
memory = ["letta-client>=1.7.12"]
memory-server = ["letta>=0.16.7"]
embeddings = ["sentence-transformers>=2.7"]
smart = ["ollama>=0.4.0"]
repo-map = ["tree-sitter>=0.23", "tree-sitter-languages>=1.10; python_version < '3.13'", "networkx>=3.4"]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]
postgres = [
    "psycopg[binary]>=3.1",
]
vector = [
    "pgvector>=0.2",
    "numpy>=1.26",
]
parsers = [
    "tree-sitter-languages>=1.10; python_version < '3.13'",
]
telemetry = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
atelier = "atelier.gateway.adapters.cli:main"
atelier-mcp = "atelier.gateway.adapters.mcp_server:main"
atelier-api = "atelier.gateway.adapters.http_api:main"
atelier-task = "atelier.gateway.adapters.wrappers:task_main"
atelier-context = "atelier.gateway.adapters.wrappers:context_main"
atelier-check-plan = "atelier.gateway.adapters.wrappers:check_plan_main"
atelier-rescue = "atelier.gateway.adapters.wrappers:rescue_main"
atelier-bench = "benchmarks.swe.run_swe_bench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atelier", "benchmarks"]

[tool.hatch.build.targets.wheel.force-include]
"src/atelier/infra/seed_blocks" = "atelier/infra/seed_blocks"
"src/atelier/core/rubrics" = "atelier/core/rubrics"
"src/atelier/core/environments" = "atelier/core/environments"
"src/atelier/core/service/telemetry/frustration_lexicon.yaml" = "atelier/core/service/telemetry/frustration_lexicon.yaml"
"templates/reasonblocks" = "atelier/templates/reasonblocks"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src", "."]
markers = [
    "slow: marks tests as slow",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "atelier.core.service.api",
    "atelier.gateway.adapters.http_api",
]
disable_error_code = ["untyped-decorator"]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
]
